# iPixel-CLI

./: .gitignore  README.md  bit_tools.py  btsnoop_hci.csv  commands.py  img_2_pix.py  ipixelcli.py  led_info.py  pyproject.toml  requirements.txt  run.sh
.github/: FUNDING.yml
.github/workflows/: python-app.yml
docs/: send_text.md
scripts/: build.sh  build_&_test.sh  dev_install.sh  generate_client_stubs.py  setup_venv.sh
src/pypixel_color_lucagoc/: pypixel-cli.py  pypixel.py
src/pypixel_color_lucagoc/commands/: clear.py  delete.py  send_image.py  send_text.py  set_brightness.py  set_clock_mode.py  set_fun_mode.py  set_orientation.py  set_rhythm_mode.py  set_time.py
src/pypixel_color_lucagoc/lib/: bit_tools.py  convert.py  img_2_pix.py
src/pypixelcolor/: __main__.py  cli.py  client.py  client.pyi  websocket.py
src/pypixelcolor/commands/: __init__.py  base.py  clear.py  delete.py  get_device_info.py  send_image.py  send_text.py  set_brightness.py  set_clock_mode.py  set_fun_mode.py  set_orientation.py  set_power.py  set_rhythm_mode.py  set_time.py
src/pypixelcolor/fonts/: font_enum.py
src/pypixelcolor/lib/: bit_tools.py  convert.py  debug.py  device_info.py  emoji_formatter.py  encode_text.py  logging.py
src/pypixelcolor/lib/transport/: send_plan.py
src/pypixelcolor/transport/: send.py
tests/: test_char_generation.py  test_send_text.py  visualize_char.py
tests/fixtures/characters/golden/: .gitkeep.example.json  16_0_CUSONG16.json  16_2_VCR_OSD_MONO.json  (+3 more)
tests/resources/: send_text.json  send_text_32.json
tools/png2gif/: png2gif.py
