[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pypixel_color_lucagoc"
version = "1.0.0"
authors = [
  { name="Lucas Balmès", email="lucagoc@pm.me" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/lucagoc/pypixel-color"
Issues = "https://github.com/lucagoc/pypixel-color/issues"
